# fog05-networking-linux

./: .travis.yml  Cargo.toml  Makefile  README.md  fos_linuxbridge.service  linuxbridge_plugin
etc/: 99-fog05-net-linux.conf  config.yaml
resources/: fos-net-linux.service
resources/debian/: postinst  postrm
src/: lib.rs  networking.rs  types.rs
templates/: vnet_create.sh  vnet_create_vlan.sh
utils/: get_addresses.py  get_face_address
